# fall_24

./: .gitignore  README.md
.devcontainer/: devcontainer.json
bi_and_data_viz/: Competitive Analysis for UWE Bristol_.pptx  README.md
big_data/: environment.yml  mongoDB_practice.ipynb
big_data/coursework_assignment/: 0_exploration.ipynb  1_database_creations.ipynb  2_etl.ipynb  3_dashboard.ipynb  README.md  dashboard.py  database_creations.ipynb  enviroment.yml  environment.yml  etl.ipynb  ontology.rdf  requirements.txt  test.py  tiktok.pkl  tiktok_youtube_dashboard.py  top_videos.json  youtube.pkl
big_data/cw_example/: customer_reviews.json  customer_transactions.csv  cw_example.ipynb
big_data/hadoop/: hadoop_practice.ipynb  reducer.py  sample.txt  temp_calc_hadoop.ipynb  temperature_data.txt  temperature_mapper.py  temperature_reducer.py
big_data/mongoDB/: mongoDB_practice.ipynb
machine_learning_and_predictive_analytics/decision_trees/: decision_trees_practice.ipynb  environment.yml  hands_on_ML_ch_6_decision_trees.ipynb
machine_learning_and_predictive_analytics/detecting_suspicious_tiktok_content_creators/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
machine_learning_and_predictive_analytics/detecting_suspicious_tiktok_content_creators/notebooks/: report.ipynb  tree.dot
machine_learning_and_predictive_analytics/imbalanced_learn/: imbalanced_learning.ipynb  over_sampling.ipynb  recommended_practices.ipynb  under_sampling.ipynb
research_methodology/: ZoteroAnalysis.ipynb  biblio.csv  bibliometric_analysis.ipynb
(+4 files in other folders)
