[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "detecting_suspecious_tiktok_content_creators"
version = "0.0.1"
description = "Using white box models to detect tiktok content creators that are under scrutiny or are banned"
authors = [
  { name = "Gonzalo Gamez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["detecting_suspecious_tiktok_content_creators"]
force_sort_within_sections = true
